generate_q_sgd_proc_single_dataset() finished

--- a/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
+++ b/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
@@ -43,17 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "importing Jupyter notebook from plt_quantile_comparison.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -62,7 +54,7 @@
     "from nbformat import read\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "\n",
-    "\n",
+    "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import import_ipynb\n",
@@ -77,11 +69,11 @@
    "source": [
     "distro_list = ['mix_gau', 'gau 1', 'gau 2', 'exp', 'my_distro']\n",
     "\n",
-    "q_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
+    "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
     "N_g = 12 # N_generation\n",
     "N_s = 10 # N_shuffle\n",
     "\n",
-    "N_q = len(q_vals)"
+    "N_q = len(tau_vals)"
    ]
   },
   {
@@ -146,7 +138,7 @@
     }
    ],
    "source": [
-    "generate_setting_lst([1, 2, 3, 4], [1], q_vals, False, False)"
+    "generate_setting_lst([1, 2, 3, 4], [1], tau_vals, False, False)"
    ]
   },
   {
@@ -180,8 +172,7 @@
     "        np.random.shuffle(mix_lst)\n",
     "        return mix_lst\n",
     "    elif distro == 'exp':\n",
-    "        return np.random.exponential(scale=1, size=datasize)\n",
-    "\n"
+    "        return np.random.exponential(scale=1, size=datasize)"
    ]
   },
   {
@@ -236,7 +227,7 @@
     "#             print (gen_id, shu_id)\n",
     "            np.random.shuffle(dt)\n",
     "            dataset[gen_id][shu_id] = dt\n",
-    "    return dataset\n"
+    "    return dataset"
    ]
   },
   {
@@ -275,6 +266,8 @@
     "        q_batches[i] = np.percentile(dataset, q_lst[i]*100)\n",
     "    return q_batches\n",
     "\n",
+    "# test\n",
+    "# generate_q_batches_single_dataset(dataset, [0])[0] == min(dataset) and generate_q_batches_single_dataset(dataset, [1])[0] == max(dataset)\n",
     "\n",
     "def generate_q_batches(dataset, q_lst, g_test, s_test):\n",
     "#     print ('generate_q_batches', dataset, g_test, s_test)\n",
@@ -292,6 +285,81 @@
     "            else:\n",
     "                q_batches[i] = generate_q_batches_single_dataset(dataset[i][0], q_lst)\n",
     "        return q_batches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.353263338346384\n",
+      "-1.3448641786293178\n",
+      "0.6635349810877488\n",
+      "2.6719341408048147\n",
+      "3.863836719594156\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.8       , -1.65857864, -1.54310859, -1.44310859, -2.24809306,\n",
+       "        -2.1664434 , -2.84677946, -3.48317556, -3.41650889, -3.35326334],\n",
+       "       [-1.4       , -0.97573593, -0.62932577, -0.32932577, -0.9554248 ,\n",
+       "        -0.71047583, -1.23962609, -1.73460084, -1.53460084, -1.34486418],\n",
+       "       [-1.        , -0.29289322,  0.28445705,  0.78445705,  0.33724345,\n",
+       "         0.74549175,  0.36752727,  0.01397388,  0.34730722,  0.66353498],\n",
+       "       [-0.6       ,  0.38994949,  1.19823987,  1.89823987,  1.62991171,\n",
+       "         2.20145932,  1.97468064,  1.7625486 ,  2.22921527,  2.67193414],\n",
+       "       [-0.2       ,  1.07279221,  2.11202269,  3.01202269,  2.92257997,\n",
+       "         2.84093031,  2.76533742,  2.69462674,  3.29462674,  3.86383672]])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def set_stepsize(k, stepsize):\n",
+    "    if stepsize=='const':\n",
+    "        return 1\n",
+    "    elif stepsize=='2/sqrt_k':\n",
+    "        return 2/math.sqrt(k)\n",
+    "    elif stepsize=='0.002/sqrt_k':\n",
+    "        return 0.002/math.sqrt(k)\n",
+    "    raise Exception('stepsize parameter is wrong')\n",
+    "\n",
+    "def generate_single_q_sgd_proc_single_dataset(dataset, stepsize, tau):\n",
+    "    q_sgd_proc = np.zeros(len(dataset))\n",
+    "    q = 0\n",
+    "    for k, x in enumerate(dataset):\n",
+    "        alpha = set_stepsize(k+1, stepsize)\n",
+    "        if x > q:\n",
+    "            q += alpha*tau\n",
+    "        else:\n",
+    "            q -= alpha*(1-tau)\n",
+    "        q_sgd_proc[k] = q\n",
+    "    return q_sgd_proc\n",
+    "\n",
+    "def generate_q_sgd_proc_single_dataset(dataset, stepsize, tau_lst):\n",
+    "    q_sgd_procs = np.zeros((len(tau_lst), len(dataset)))\n",
+    "    for idx, tau in enumerate(tau_lst):\n",
+    "        q_sgd_procs[idx] = generate_single_q_sgd_proc_single_dataset(dataset, stepsize, tau)\n",
+    "    return q_sgd_procs\n",
+    "    \n",
+    "dataset = generate_single_dataset(distro='gau 1', datasize=10) \n",
+    "print (generate_single_q_sgd_proc_single_dataset(dataset, '2/sqrt_k', 0.1)[9])\n",
+    "print (generate_single_q_sgd_proc_single_dataset(dataset, '2/sqrt_k', 0.3)[9])\n",
+    "print (generate_single_q_sgd_proc_single_dataset(dataset, '2/sqrt_k', 0.5)[9])\n",
+    "print (generate_single_q_sgd_proc_single_dataset(dataset, '2/sqrt_k', 0.7)[9])\n",
+    "print (generate_single_q_sgd_proc_single_dataset(dataset, '2/sqrt_k', 0.9)[9])\n",
+    "\n",
+    "generate_q_sgd_proc_single_dataset(dataset, '2/sqrt_k', [0.1, 0.3, 0.5, 0.7, 0.9])\n",
+    "\n"
    ]
   },
   {
@@ -341,7 +409,7 @@
     }
    ],
    "source": [
-    "dataset, q_batches = generate_reusable_data('exp', 1000000, q_vals, True, True)\n",
+    "dataset, q_batches = generate_reusable_data('exp', 1000000, tau_vals, True, True)\n",
     "print(dataset.shape, '\\n',\n",
     "      dataset.mean(), dataset.std(), np.median(dataset))\n",
     "print(q_batches)"
@@ -371,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +459,7 @@
     "#         - tables to be shown in {tbl_res, tbl_proc}\n",
     "\n",
     "def quantile_sgd_compare(distro, datasize, stepsize, \n",
-    "                            g_test=False, s_test=False, q_lst=q_vals, \n",
+    "                            g_test=False, s_test=False, q_lst=tau_vals, \n",
     "                           charts={'plt_res', 'plt_proc', 'plt_e'}, tables={'tbl_res, tbl_proc'}):\n",
     "    dataset, q_batches = 0, 0\n",
     "    N_comp = get_n_comp(distro, datasize, stepsize)\n",
@@ -414,7 +482,7 @@
     "            print (dataset.shape, q_batches)\n",
     "            q_sgd_res, q_sgd_proc = generate_q_sgds(dataset, stepsize, q_lst, g_test, s_test)\n",
     "        else:\n",
-    "            print ('different q_sgd', i)\n",
+    "            print ('different q_sgd', i , 'for same dataset and q_batches')\n",
     "            q_sgd_res, q_sgd_proc = generate_q_sgds(dataset, stepsize[i], q_lst, g_test, s_test)\n",
     "        plts = draw_charts(q_batches, q_sgd_res, q_sgd_proc, g_test, s_test, charts)\n",
     "        tbls = draw_tables(q_batches, q_sgd_res, q_sgd_proc, g_test, s_test, tables)\n",
@@ -426,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -437,21 +505,21 @@
       "step size\n",
       "3\n",
       "generate_reusable_data ('gau 1', 100, [0.1, 0.3, 0.5, 0.9, 0.99], True, False)\n",
-      "(12, 100) [[-23.62333892  -9.19081682  -0.79794357  18.91473365  37.97894605]\n",
-      " [-24.13639435  -6.97242004  -0.85398578  18.20687468  41.45425806]\n",
-      " [-15.90165152  -6.05168069   2.08176721  26.82313176  42.84113451]\n",
-      " [-19.10568246  -7.16856801   2.80144182  23.41060872  35.9572    ]\n",
-      " [-19.72066394  -8.11831581   3.88529659  29.36675737  46.28148199]\n",
-      " [-19.86753775  -9.86769591   0.65146582  22.76833742  29.78445232]\n",
-      " [-16.94340811  -7.50098772  -0.12258783  22.88168449  41.72763182]\n",
-      " [-23.39625436  -5.00641602   4.28856299  29.74279972  38.83326316]\n",
-      " [-19.97911495  -8.13402831   1.54195416  24.8938768   32.72577811]\n",
-      " [-20.07108511  -6.22554944  -0.55848903  28.97152843  43.4278944 ]\n",
-      " [-18.99926039  -7.06994621  -0.24780702  21.04037702  39.2583893 ]\n",
-      " [-20.28833445  -4.82197652   2.41053216  24.53318208  35.41429514]]\n",
-      "different q_sgd 0\n",
-      "different q_sgd 1\n",
-      "different q_sgd 2\n"
+      "(12, 100) [[-18.50616073  -6.75540173   1.66434096  19.69393024  37.11196061]\n",
+      " [-20.24732304  -7.79467166   3.01651558  27.55818813  42.81614153]\n",
+      " [-18.35119153  -9.61698847   2.87360646  26.92948333  50.607588  ]\n",
+      " [-21.89769227  -8.22531145   2.71215293  26.10498396  39.26575031]\n",
+      " [-22.41989369  -8.73375873   1.82368928  26.90624378  41.38385326]\n",
+      " [-15.74690401  -5.16144076   4.18178792  29.6857424   42.56322859]\n",
+      " [-21.96848891  -6.59742816   1.50559181  20.50096458  45.40526699]\n",
+      " [-23.57168756  -8.01341939   2.64179234  21.35122791  33.33328392]\n",
+      " [-18.39710256  -6.15136009   0.08442484  22.37411564  41.364338  ]\n",
+      " [-23.25099031 -10.22207885   0.96982427  20.96164454  37.63805355]\n",
+      " [-19.1428771  -10.42032051  -0.63881831  19.02683419  43.19880243]\n",
+      " [-25.41161493 -10.5987427   -1.78262762  19.60137936  48.61371633]]\n",
+      "different q_sgd 0 for same dataset and q_batches\n",
+      "different q_sgd 1 for same dataset and q_batches\n",
+      "different q_sgd 2 for same dataset and q_batches\n"
      ]
     }
    ],
