--- a/QuantEst/sgd_quant_est/plt_quantile_comparison.ipynb
+++ b/QuantEst/sgd_quant_est/plt_quantile_comparison.ipynb
@@ -59,7 +59,7 @@
    ],
    "source": [
     "N_shuffle = 14\n",
-    "N_generation = 10\n",
+    "N_generatigton = 10\n",
     "q_vals = [0.1, 0.3, 0.5, 0.7, 0.9]\n",
     "N_q = len(q_vals)\n",
     "\n",
