Half of Q_init file explanation done, also changed a bit of comparison_image_gen file

--- a/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
+++ b/QuantEst/sgd_quant_est/comparison_image_generation.ipynb
@@ -971,14 +971,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dasfjksal;\n",
+    "fadfaYy\n",
+    "def daffadsf¥¥¥¥\n",
+    "fa\n",
+    "\n",
+    "### dfsjhafjk\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plt: errorbar\n",
-    "# https://matplotlib.org/3.1.1/gallery/lines_bars_and_markers/errorbar_subsample.html#sphx-glr-gallery-lines-bars-and-markers-errorbar-subsample-py"
+    "def sum(a, b):\n",
+    "    return a+b\n",
+    "da dfa fadf fadfa "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
