not quite sure if the result is correct

--- a/QuantEst/sgd_quant_est/Q_init.ipynb
+++ b/QuantEst/sgd_quant_est/Q_init.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "## Mathmatical Theory Proof\n",
     "\n",
-    "Here we want to proof that for any datasets and $\\tau$ values, the q_init has a higher possibility to be closer to the real quantile number than a randomly chosen q_r.\n",
+    "Here we want to proof that for any distribution and $\\tau$ values, the q_init has a higher possibility to be closer to the real quantile number than a randomly chosen q_r.\n",
     "\n",
     "### Convertion to uniform distribution histograms by quantiles\n",
     "\n",
@@ -78,9 +78,10 @@
     "    \\begin{cases}\n",
     "      (-\\infty, Q_{\\tau +0.05}) & \\text{if $\\tau < 0.05$}\\\\\n",
     "      (Q_{\\tau -0.05}, Q_{\\tau +0.05}) & \\text{if $\\tau \\geq 0.05$ and $\\tau \\leq 0.95$}\\\\\n",
-    "      (Q_{\\tau -0.05}, +\\infty) & \\text{if $\\tau > 0.95$}\n",
+    "      (-\\tau + 1.05, +\\infty) & \\text{if $\\tau > 0.95$}\n",
     "    \\end{cases}       \n",
     "$$\n",
+    "To simplify it, we say $A_\\tau = (Q_{\\tau^{-}}, Q_{\\tau^{+}})$, and it is obvious that $Q_{\\tau^{-}}< Q_{\\tau} < Q_{\\tau^{+}}$\n",
     "\n",
     "Here we want to show that $Pr(q_{init} \\in A_\\tau) \\geq Pr(q_r \\in A_\\tau)$\n",
     "\n",
@@ -92,11 +93,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Proof\n",
+    "$$\n",
+    "Pr(q_r \\in A_\\tau) = \n",
+    "    \\begin{cases}\n",
+    "      \\tau +0.05 &   \\text{($0 < \\tau < 0.05$)}\\\\\n",
+    "      0.1 &          \\text{($0.05 \\leq \\tau \\leq 0.95$)}\\\\\n",
+    "      -\\tau + 1.05 & \\text{($ 0.95 < \\tau < 1$)}\n",
+    "    \\end{cases}  \n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9762889173365232 0.7854425566295851\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def nCr(n,r):\n",
+    "    f = math.factorial\n",
+    "    return f(n) / f(r) / f(n-r)\n",
+    "\n",
+    "def exact_x_times(n, x, p):\n",
+    "    return nCr(n,x) * ((p)**x) * ((1-p)**(n-x))\n",
+    "\n",
+    "def at_most_x_times(n, x, p):\n",
+    "    l = [exact_x_times(n, i, p) for i in range(x+1)]\n",
+    "    return sum(l)\n",
+    "\n",
+    "# at_most_x_times(10, 10, 0.9)\n",
+    "# at_most_x_times(10, 3, 0.1)\n",
+    "\n",
+    "N_init = 10\n",
+    "def compute_prob_q_init(n, tau):\n",
+    "    k = int(tau * n)\n",
+    "#     print (k)\n",
+    "    p1, p2 = 1, 1\n",
+    "    if tau >= 0.05:\n",
+    "#         print ('p1:', k, tau-0.05)\n",
+    "        p1 = at_most_x_times(n, k, tau-0.05)\n",
+    "#         print ('   ', p1)\n",
+    "    if tau <= 0.95:\n",
+    "#         print ('p2:', n-k, 1-(tau+0.05))\n",
+    "        p2 = at_most_x_times(n, n-k, 1-(tau+0.05))\n",
+    "#         print ('   ', p2)\n",
+    "    return p1 * p2\n",
+    "\n",
+    "a = compute_prob_q_init(100, 0.95)\n",
+    "b = compute_prob_q_init(100, 0.3)\n",
+    "print (a, b)"
+   ]
   },
   {
    "cell_type": "code",
