untitled and test done for get_dataset()

--- a/QuantEst/sgd_quant_est/Untitled.ipynb
+++ b/QuantEst/sgd_quant_est/Untitled.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,11 +83,11 @@
     "        # std: 30.779035604224564\n",
     "        # var: 947.3490327261234\n",
     "        sizes = np.array([0.3, 0.2, 0.1, 0.15, 0.25]) * datasize\n",
-    "        d1 = np.random.normal(2.0, 7.0, int(sizes[0]))\n",
-    "        d2 = np.random.normal(0, 3.7, int(sizes[1]))\n",
-    "        d3 = np.random.normal(-9, 7, int(sizes[2]))\n",
+    "        d1 = np.random.normal(2, 7, int(sizes[0]))\n",
+    "        d2 = np.random.normal(0, 0.7, int(sizes[1]))\n",
+    "        d3 = np.random.normal(36, 26, int(sizes[2]))\n",
     "        d4 = np.random.normal(5, 77, int(sizes[3]))\n",
-    "        d5 = np.random.normal(-7, 7, int(sizes[4]))\n",
+    "        d5 = np.random.normal(-77, 7, int(sizes[4]))\n",
     "        mix_lst = np.append(d1, np.append(d2, np.append(d3, np.append(d4, d5))))\n",
     "        np.random.shuffle(mix_lst)\n",
     "        return mix_lst\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,27 +114,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12, 100)"
+       "[-14.372894424541665,\n",
+       " -14.84304241515481,\n",
+       " -13.885987241202601,\n",
+       " -15.636798059417698,\n",
+       " -11.421243670972046,\n",
+       " -14.145781197822386,\n",
+       " -13.370555833926213,\n",
+       " -11.161201936226055,\n",
+       " -14.348034922745843,\n",
+       " -13.58237328424623,\n",
+       " -14.983914963682437,\n",
+       " -13.875742632204325]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "get_dataset('exp', 100, True).shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,8 +174,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!---\n",
+    "### Always have $q_k = x$ for each x in the data stream\n",
+    "\n",
+    "When $x - q_k > 0$, we have $l(q_k) = \\tau(x-q_k)$:\n",
+    "\\begin{align}\n",
+    "q_{k+1} & = q_k - \\frac{l(q_k)}{l'(q_k)} \\\\\n",
+    "        & = q_k - \\frac{\\tau(x-q_k)}{-\\tau} \\\\\n",
+    "        & = q_k - (- x + q_k) \\\\\n",
+    "        & = x\n",
+    "\\end{align}\n",
+    "\n",
+    "Same happens when $x - q_k < 0$\n",
+    "-->"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
