--- a/QuantEst/thesis/draft/sgd_exp.tex
+++ b/QuantEst/thesis/draft/sgd_exp.tex
@@ -15,7 +15,7 @@
 % \subsection{Aims}
 This experiment has two purposes. The first is to show quantile estimation with SGD works \textcolor{blue}{ under some circimstances (?)}.
 The second aim is to investigate how different settings of the problem effect the estimation performance.
-In the experiment, multiple datasets are generated as input data streams, based on which the calculated and estimated quantile values are computed. Results of both quantiles are compared after processing. We want to compare the performance of quantile estimation over different settings.
+In the experiment, multiple ordered datasets are generated as input data streams, based on which the calculated and estimated quantile values are computed. Results of both quantiles are compared after processing. We want to compare the performance of quantile estimation over different settings.
 % \\\\
 % To test the SGD quantile estimation as a valid alternative for quantile estimation, this experiment computes both estimated and calculated values for quantiles, and evaluates whether the difference between the results is acceptable.
 % \\\\
@@ -23,16 +23,43 @@ In the experiment, multiple datasets are generated as input data streams, based 
 
 
 \section{Methodology}
-Throw dice randomly
+The process by which we experiment on SGD quantile estimation can be briefly outlined as followes:
+
+\begin{enumerate}
+    \item Select a set of data streams (ordered datasets) derived from some statistical distributions.
+    \item For each $\tau$-quantile, determine a ground truth value from the distribution and calculate a empirical value from the data stream.
+    \item For each $\tau$-quantile, calculate the SGD estimate value from the data stream, record both the process and the result of estimation.
+    % \item Compare the 
+\end{enumerate}
+
+\subsection{Data Stream Set Generation}
+A total of 4 distributions are used in this experiment.
+Eah data stream is a set of 1 dimensional data points randomly sampled from one of the distributions. In order to show how the amount of data points might affect the performance, there are 3 different settings for the data size $N$. 
+\\\\
+Each data stream set is composed of a number of data streams. For a statistically more accurate results on the experiment, a group of data streams of the same settings are generated. When investigating the impact of data sequence has on quantile estimation, one data stream will be shuffled to for the generation to differently ordered data steams. To sum up, a data stream set is either a combination of data streams generated from same distribution and data size setting, or the permutations of one same data stream. We generate the data stream set under this settings:
+
+\begin{itemize}
+    \item Distribution: 4 statistical distributions. The 4 distributions are:
+        \begin{itemize}
+            \item Gaussian distribution 1: mean = 2, standard deviation = 18
+            \item Gaussian distribution 2: mean = 0, standard deviation = 0.001
+            \item Exponetial distribution: rate = 1
+            \item Mixed Gaussian distribution: a mix of five different gaussian distributions
+        \end{itemize}
+    \item Data size: 100, 1000, 10000, 100000(?)
+    \item Multiple generations: True or false. Generate 10 data streams for the set if true.
+    \item Multiple shuffles:  True or false. Shuffle the data stream 10 times for the set if true.
+\end{itemize}
+
+
 \section{Observations}
-No observation so far. Girls are pretty \smiley{}
+
+
 \section{Discussion? Accuracy of study?}
-We all agree girls are pretty. 100\% accuraty.
 % \begin{equation}
 %     E = | \frac{q_{batch} - q_{sgd}}{{q_{batch}}^{(1)} - {q_{batch}}^{(2)}} |
 % \end{equation}
 \section{Conclusion}
-We should have Messina for dinner
 
 \end{document}
 \end(documentclass)
