--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,36 +114,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-14.372894424541665,\n",
-       " -14.84304241515481,\n",
-       " -13.885987241202601,\n",
-       " -15.636798059417698,\n",
-       " -11.421243670972046,\n",
-       " -14.145781197822386,\n",
-       " -13.370555833926213,\n",
-       " -11.161201936226055,\n",
-       " -14.348034922745843,\n",
-       " -13.58237328424623,\n",
-       " -14.983914963682437,\n",
-       " -13.875742632204325]"
+       "array([0.50132702, 0.70339174, 0.89988036])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "def get_q_batch(dataset, tau_lst):\n",
+    "    if len(dataset.shape) != 1:\n",
+    "        raise Exception('Dataset for q_batch calculation of wrong shape: ' + str(dataset.shape))\n",
+    "        \n",
+    "    q_batch = np.zeros(len(tau_lst))\n",
+    "    for i, tau in enumerate(tau_lst):\n",
+    "        q_batch[i] = np.percentile(dataset, tau*100)\n",
+    "    return q_batch\n",
+    "\n",
+    "get_q_batch(np.random.uniform(0,1, 10000), [0.5, 0.7, 0.9])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_q_batches(dataset, tau_lst):\n",
+    "    # g_test = False\n",
+    "    if len(dataset.shape) == 1: \n",
+    "        return get_q_batch(dataset, tau_lst)\n",
+    "    else:\n",
+    "        q_batches = np.zeros((dataset.shape[0], len(tau_lst)))\n",
+    "        for i in range(q_batches.shape[0]):\n",
+    "            q_batches[i] = get_q_batch(dataset[i], tau_lst)\n",
+    "    return q_batches\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,8 +174,8 @@
     "    # if only stepsize changes, generate dataset and q_batches\n",
     "    dataset, q_batches = 0, 0\n",
     "    if is_stepsize:\n",
-    "        dataset = get_dataset(distro[0], datasize[0], g_test)\n",
-    "#         q_batches = get_q_batches(dataset, tau_lst, g_test)\n",
+    "        dataset = get_dataset(distro_lst[0], datasize_lst[0], g_test)\n",
+    "        q_batches = get_q_batches(dataset, tau_lst)\n",
     "        \n",
     "#     # for each setting = [distro, datasize, stepsize]\n",
     "#     for idx, setting in enumerate(setting_lst):\n",
@@ -194,11 +213,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g_test True\n"
+     ]
+    }
+   ],
    "source": [
-    "# quantile_sgd_compare()"
+    "quantile_sgd_compare(distro_lst=['gau 1'], datasize_lst=[100], stepsize_lst=['const', 'others'], g_test=True)"
    ]
   },
   {
@@ -214,18 +241,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
   }
  },
  "nbformat": 4,
